--- a/manifest.json
+++ b/manifest.json
@@ -1,41 +1,23 @@
 {
     "manifest_version": 3,
-    "name": "Reading time",
+    "name": "Text Sender",
     "version": "1.0",
-    "description": "Add the reading time to Chrome Extension documentation articles",
-    "action": {
-        "default_icon": {
-            "16": "images/icon-16.png",
-            "32": "images/icon-32.png",
-            "48": "images/icon-48.png",
-            "128": "images/icon-128.png"
-        }
-    },
-    "icons": {
-        "16": "images/icon-16.png",
-        "32": "images/icon-32.png",
-        "48": "images/icon-48.png",
-        "128": "images/icon-128.png"
-    },
-    "content_scripts": [
-        {
-        "js": ["scripts/content.js"],
-        "matches": [
-            "https://developer.chrome.com/docs/extensions/*",
-            "https://developer.chrome.com/docs/webstore/*"
-        ]
-        }
+    "description": "Send selected text to a Python script.",
+    "permissions": [
+      "contextMenus",
+      "activeTab"
     ],
     "background": {
-        "service_worker": "background.js"
+      "service_worker": "background.js"
     },
-    "permissions": ["activeTab", "scripting"],
-    "commands": {
-        "_execute_action": {
-        "suggested_key": {
-            "default": "Ctrl+B",
-            "mac": "Command+B"
-        }
-        }
+    "content_scripts": [
+      {
+        "matches": ["*://*.example.com/*"],
+        "js": ["content.js"]
+      }
+    ],
+    "action": {
+      "default_popup": "popup.html"
     }
-}
+  }
+  
